--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ body {
     color: #fff;
     background-color: #103D5D;
     padding: 33px 0 25px 15px;
+    text-align: center;
   }
   
   header h1 {
@@ -31,6 +32,8 @@ body {
   
   .container {
     display: flex;
+    align-items: center;
+    justify-content: center;    
     max-width: 1100px;
     margin: 0 auto;
     padding-top: 30px;
